fix bread list align and Popular Location page top align

--- a/style.css
+++ b/style.css
@@ -508,7 +508,7 @@ blockquote:after		{position: absolute;
 		list-style: none}
 
 .bread li a	{display: inline-block;
-		padding: 5px 5px;
+		padding: 0px 5px;
 		color: #888888;
 		font-size: 12px;
 		text-decoration: none}
